samples/_failures_safe/1761521164_e2ff67_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_be3e6e92.c:189:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  189 | void freeGraph
      | ^~~~
